// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v.compileAnd v.compileAnd() 1`] = `
Object {
  "_": "function () { return true; }",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`v.compileAnd v.compileAnd({ a: v.number }, { b: v.string}) 1`] = `
Object {
  "0": "function validator(value) {
  if (!value) return false
  if (typeof value.a !== 'number') return false
  return true
}",
  "0.explanations": Array [],
  "0.pure": true,
  "1": "function validator(value) {
  if (!value) return false
  if (typeof value.b !== 'string') return false
  return true
}",
  "1.explanations": Array [],
  "1.pure": true,
  "_": "function validator(value) {
  if (!validator[0](value)) return false
  if (!validator[1](value)) return false
  return true
}",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`v.compileAnd v.compileAnd(1) 1`] = `
Object {
  "_": "function (value) { return value === c; }",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`v.compileAnd v.compileAnd(1, 1) 1`] = `
Object {
  "_": "function (value) { return value === c; }",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`v.compileAnd v.compileAnd(1, 1, 2) 1`] = `
Object {
  "_": "function () { return false; }",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`v.compileAnd v.compileAnd(v.positive, v.number) 1`] = `
Object {
  "_": "function validator(value) {
  if (value <= 0) return false
  if (typeof value !== 'number') return false
  return true
}",
  "explanations": Array [],
  "pure": true,
}
`;
